# ai-ml-practice

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  calculator.py  pyproject.toml
src/git_day_practice/: api.py  settings.py
tests/: conftest.py  test_config.py  test_secure.py  test_validation.py
