[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-ml-practice"
version = "0.1.0"
description = "Week 1 Day 3: Python tooling setup (venv, Ruff, pre-commit)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

# Development dependencies as an optional extra.
[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.6",
]

# If you use a src/ layout, explicitly tell hatch which package to ship.
[tool.hatch.build.targets.wheel]
packages = ["src/git_day_practice"]

#
# Ruff configuration
#
[tool.ruff]
line-length = 88
indent-width = 4

# Lint rule configuration
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]
ignore = ["E501"]

# Formatter configuration
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
